# BEAVER-client

./: .gitignore  README.md  app.py  app_state.py  backend_api.py  beaver.spec  bubble.html  comment_ui.py  constants.py  events.py  main.py  overlay.py  pyproject.toml  pyrightconfig.json  requirements.txt  stamp.html  transcription_service.py  ui.py
config/: constants.py
services/: backend_api.py  events.py  transcription_service.py
state/: app_state.py
tests/: test_backend_api.py  test_comment_ui.py  test_constants.py  test_display_layout.py  test_transcription_service.py  test_windows.py
ui/: admin_cards.py  admin_theme.py  comment_ui.py  display_layout.py  file_utils.py  overlay.py  poll_results_overlay.py  windows.py
