[project]
name = "BEAVER-client"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pillow>=12.2.0",
    "pyinstaller",
    "requests",
    "screeninfo",
    "sounddevice",
    "wsproto",
]

[tool.uv.workspace]
members = [
    "pyinstaller",
]

[tool.uv.sources]
pyinstaller = { workspace = true }
