[project]
name = "BEAVER-client"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pillow>=12.2.0",
    "pyinstaller",
    "requests",
    "ruff>=0.15.18",
    "screeninfo",
    "wsproto",
]

[tool.uv.workspace]
members = [
    "pyinstaller",
]

[tool.uv.sources]
pyinstaller = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.410",
]
